--- a/Proyeto.GestionRepuestos.MVC/Views/Manage/ChangePassword.cshtml
+++ b/Proyeto.GestionRepuestos.MVC/Views/Manage/ChangePassword.cshtml
@@ -3,40 +3,47 @@
     ViewBag.Title = "Cambiar contraseña";
 }
 
-<main aria-labelledby="title">
-    <h2 id="title">@ViewBag.Title.</h2>
-
-    @using (Html.BeginForm("ChangePassword", "Manage", FormMethod.Post, new { role = "form" }))
-    {
-        @Html.AntiForgeryToken()
-        <h4>Formulario para cambiar contraseña</h4>
-        <hr />
-        @Html.ValidationSummary("", new { @class = "text-danger" })
-        <div class="row">
-            @Html.LabelFor(m => m.OldPassword, new { @class = "col-md-2 col-form-label" })
-            <div class="col-md-10">
-                @Html.PasswordFor(m => m.OldPassword, new { @class = "form-control" })
+<div class="container mt-5">
+    <div class="row justify-content-center">
+        <div class="col-md-7 col-lg-6">
+            <div class="card shadow">
+                <div class="card-body">
+                    <h2 class="card-title mb-4 text-center">@ViewBag.Title</h2>
+                    @using (Html.BeginForm("ChangePassword", "Manage", FormMethod.Post, new { role = "form" }))
+                    {
+                        @Html.AntiForgeryToken()
+                        <h5 class="mb-3">Formulario para cambiar contraseña</h5>
+                        <hr />
+                        @Html.ValidationSummary("", new { @class = "text-danger" })
+                        <div class="mb-3 row">
+                            @Html.LabelFor(m => m.OldPassword, new { @class = "col-md-4 col-form-label" })
+                            <div class="col-md-8">
+                                @Html.PasswordFor(m => m.OldPassword, new { @class = "form-control" })
+                            </div>
+                        </div>
+                        <div class="mb-3 row">
+                            @Html.LabelFor(m => m.NewPassword, new { @class = "col-md-4 col-form-label" })
+                            <div class="col-md-8">
+                                @Html.PasswordFor(m => m.NewPassword, new { @class = "form-control" })
+                            </div>
+                        </div>
+                        <div class="mb-3 row">
+                            @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-4 col-form-label" })
+                            <div class="col-md-8">
+                                @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="offset-md-4 col-md-8">
+                                <input type="submit" value="Cambiar contraseña" class="btn btn-primary" />
+                            </div>
+                        </div>
+                    }
+                </div>
             </div>
         </div>
-        <div class="row">
-            @Html.LabelFor(m => m.NewPassword, new { @class = "col-md-2 col-form-label" })
-            <div class="col-md-10">
-                @Html.PasswordFor(m => m.NewPassword, new { @class = "form-control" })
-            </div>
-        </div>
-        <div class="row">
-            @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 col-form-label" })
-            <div class="col-md-10">
-                @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
-            </div>
-        </div>
-        <div class="row">
-            <div class="offset-md-2 col-md-10">
-                <input type="submit" value="Cambiar contraseña" class="btn btn-outline-dark" />
-            </div>
-        </div>
-    }
-</main>
+    </div>
+</div>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
