--- a/Proyeto.GestionRepuestos.MVC/Views/Manage/SetPassword.cshtml
+++ b/Proyeto.GestionRepuestos.MVC/Views/Manage/SetPassword.cshtml
@@ -3,39 +3,47 @@
     ViewBag.Title = "Crear contraseña";
 }
 
-<main aria-labelledby="title">
-    <h2 id="title">@ViewBag.Title.</h2>
-    <p class="text-info">
-        No dispone de un nombre de usuario o contraseña local para este sitio. Agregue una cuenta
-        local para iniciar sesión sin que sea necesario ningún inicio de sesión externo.
-    </p>
-
-    @using (Html.BeginForm("SetPassword", "Manage", FormMethod.Post, new { role = "form" }))
-    {
-        @Html.AntiForgeryToken()
-
-        <h4>Crear inicio de sesión local</h4>
-        <hr />
-        @Html.ValidationSummary("", new { @class = "text-danger" })
-        <div class="row">
-            @Html.LabelFor(m => m.NewPassword, new { @class = "col-md-2 col-form-label" })
-            <div class="col-md-10">
-                @Html.PasswordFor(m => m.NewPassword, new { @class = "form-control" })
+<div class="container mt-5">
+    <div class="row justify-content-center">
+        <div class="col-md-6 col-lg-5">
+            <div class="card shadow-sm">
+                <div class="card-header bg-primary text-white">
+                    <h2 class="mb-0">@ViewBag.Title</h2>
+                </div>
+                <div class="card-body">
+                    <p class="text-info">
+                        No dispone de un nombre de usuario o contraseña local para este sitio. Agregue una cuenta
+                        local para iniciar sesión sin que sea necesario ningún inicio de sesión externo.
+                    </p>
+                    @using (Html.BeginForm("SetPassword", "Manage", FormMethod.Post, new { role = "form" }))
+                    {
+                        @Html.AntiForgeryToken()
+                        <h5 class="mb-3">Crear inicio de sesión local</h5>
+                        <hr />
+                        @Html.ValidationSummary("", new { @class = "text-danger" })
+                        <div class="mb-3 row">
+                            @Html.LabelFor(m => m.NewPassword, new { @class = "col-md-4 col-form-label" })
+                            <div class="col-md-8">
+                                @Html.PasswordFor(m => m.NewPassword, new { @class = "form-control" })
+                            </div>
+                        </div>
+                        <div class="mb-3 row">
+                            @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-4 col-form-label" })
+                            <div class="col-md-8">
+                                @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="offset-md-4 col-md-8">
+                                <input type="submit" value="Establecer contraseña" class="btn btn-outline-dark" />
+                            </div>
+                        </div>
+                    }
+                </div>
             </div>
         </div>
-        <div class="row">
-            @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 col-form-label" })
-            <div class="col-md-10">
-                @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
-            </div>
-        </div>
-        <div class="row">
-            <div class="offset-md-2 col-md-10">
-                <input type="submit" value="Establecer contraseña" class="btn btn-outline-dark" />
-            </div>
-        </div>
-    }
-</main>
+    </div>
+</div>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
