--- a/Proyeto.GestionRepuestos.MVC/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/Proyeto.GestionRepuestos.MVC/Views/Account/ExternalLoginConfirmation.cshtml
@@ -2,36 +2,42 @@
 @{
     ViewBag.Title = "Registrarse";
 }
-<main aria-labelledby="title">
-    <h2 id="title">@ViewBag.Title.</h2>
-    <h3>Asocie su cuenta @ViewBag.LoginProvider.</h3>
-
-    @using (Html.BeginForm("ExternalLoginConfirmation", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { role = "form" }))
-    {
-        @Html.AntiForgeryToken()
-
-        <h4>Formulario de asociación</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <p class="text-info">
-            Se autenticó correctamente con <strong>@ViewBag.LoginProvider</strong>.
-            Escriba un nombre de usuario para este sitio a continuación y haga clic en el botón Registrar para finalizar
-            el inicio de sesión.
-        </p>
-        <div class="row">
-            @Html.LabelFor(m => m.Email, new { @class = "col-md-2 col-form-label" })
-            <div class="col-md-10">
-                @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
-                @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
+<div class="container mt-5">
+    <div class="row justify-content-center">
+        <div class="col-md-7 col-lg-6">
+            <div class="card shadow-sm">
+                <div class="card-header bg-primary text-white">
+                    <h2 class="mb-0">@ViewBag.Title</h2>
+                </div>
+                <div class="card-body">
+                    <h4 class="mb-3">Asocie su cuenta @ViewBag.LoginProvider.</h4>
+                    @using (Html.BeginForm("ExternalLoginConfirmation", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { role = "form" }))
+                    {
+                        @Html.AntiForgeryToken()
+                        <h5 class="mb-3">Formulario de asociación</h5>
+                        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                        <p class="text-info">
+                            Se autenticó correctamente con <strong>@ViewBag.LoginProvider</strong>.<br />
+                            Escriba un nombre de usuario para este sitio a continuación y haga clic en el botón Registrar para finalizar el inicio de sesión.
+                        </p>
+                        <div class="mb-3 row">
+                            @Html.LabelFor(m => m.Email, new { @class = "col-md-3 col-form-label" })
+                            <div class="col-md-9">
+                                @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+                                @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="offset-md-3 col-md-9">
+                                <input type="submit" class="btn btn-primary" value="Registrarse" />
+                            </div>
+                        </div>
+                    }
+                </div>
             </div>
         </div>
-        <div class="row">
-            <div class="offset-md-2 col-md-10">
-                <input type="submit" class="btn btn-outline-dark" value="Registrarse" />
-            </div>
-        </div>
-    }
-</main>
+    </div>
+</div>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
