--- a/Proyeto.GestionRepuestos.MVC/Views/Account/ExternalLoginFailure.cshtml
+++ b/Proyeto.GestionRepuestos.MVC/Views/Account/ExternalLoginFailure.cshtml
@@ -2,9 +2,9 @@
     ViewBag.Title = "Error de inicio de sesión";
 }
 
-<main>
-    <hgroup>
-        <h2>@ViewBag.Title.</h2>
-        <h3 class="text-danger">El inicio de sesión con el servicio no se ha llevado a cabo correctamente.</h3>
-    </hgroup>
-</main>
+<div class="container mt-5">
+    <div class="alert alert-danger text-center">
+        <h2>@ViewBag.Title</h2>
+        <h4>El inicio de sesión con el servicio no se ha llevado a cabo correctamente.</h4>
+    </div>
+</div>
