--- a/Proyeto.GestionRepuestos.MVC/Views/Account/ForgotPasswordConfirmation.cshtml
+++ b/Proyeto.GestionRepuestos.MVC/Views/Account/ForgotPasswordConfirmation.cshtml
@@ -2,13 +2,19 @@
     ViewBag.Title = "Confirmación de contraseña olvidada";
 }
 
-<main aria-labelledby="title">
-    <hgroup class="title">
-        <h1 id="title">@ViewBag.Title.</h1>
-    </hgroup>
-    <div>
-        <p>
-            Compruebe el correo electrónico para restablecer la contraseña.
-        </p>
+<div class="container mt-5">
+    <div class="row justify-content-center">
+        <div class="col-md-6 col-lg-5">
+            <div class="card shadow-sm">
+                <div class="card-header bg-success text-white">
+                    <h2 class="mb-0">@ViewBag.Title</h2>
+                </div>
+                <div class="card-body text-center">
+                    <p class="mb-0">
+                        Compruebe el correo electrónico para restablecer la contraseña.
+                    </p>
+                </div>
+            </div>
+        </div>
     </div>
-</main>
+</div>
