--- a/Proyeto.GestionRepuestos.MVC/Views/Account/SendCode.cshtml
+++ b/Proyeto.GestionRepuestos.MVC/Views/Account/SendCode.cshtml
@@ -3,23 +3,33 @@
     ViewBag.Title = "Enviar";
 }
 
-<main aria-labelledby="title">
-    <h2 id="title">@ViewBag.Title.</h2>
-
-    @using (Html.BeginForm("SendCode", "Account", new { ReturnUrl = Model.ReturnUrl }, FormMethod.Post, new { role = "form" })) {
-        @Html.AntiForgeryToken()
-        @Html.Hidden("rememberMe", @Model.RememberMe)
-        <h4>Enviar código de verificación</h4>
-        <hr />
-        <div class="row">
-            <div class="col-md-8">
-                Seleccione el proveedor de autenticación en dos fases:
-                @Html.DropDownListFor(model => model.SelectedProvider, Model.Providers)
-                <input type="submit" value="Enviar" class="btn btn-outline-dark" />
+<div class="container mt-5">
+    <div class="row justify-content-center">
+        <div class="col-md-6 col-lg-5">
+            <div class="card shadow-sm">
+                <div class="card-header bg-primary text-white">
+                    <h2 class="mb-0">@ViewBag.Title</h2>
+                </div>
+                <div class="card-body">
+                    @using (Html.BeginForm("SendCode", "Account", new { ReturnUrl = Model.ReturnUrl }, FormMethod.Post, new { role = "form" }))
+                    {
+                        @Html.AntiForgeryToken()
+                        @Html.Hidden("rememberMe", @Model.RememberMe)
+                        <h5 class="mb-3">Enviar código de verificación</h5>
+                        <hr />
+                        <div class="mb-3">
+                            <label for="SelectedProvider" class="form-label">Seleccione el proveedor de autenticación en dos fases:</label>
+                            @Html.DropDownListFor(model => model.SelectedProvider, Model.Providers, new { @class = "form-select" })
+                        </div>
+                        <div class="d-grid">
+                            <input type="submit" value="Enviar" class="btn btn-primary" />
+                        </div>
+                    }
+                </div>
             </div>
         </div>
-    }
-</main>
+    </div>
+</div>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
