--- a/Proyeto.GestionRepuestos.MVC/Views/Home/Index.cshtml
+++ b/Proyeto.GestionRepuestos.MVC/Views/Home/Index.cshtml
@@ -2,9 +2,15 @@
     ViewBag.Title = "Inicio";
 }
 
-<main>
-    <section class="row" aria-labelledby="aspnetTitle">
-        <h1 id="title">Proyecto #1 - Yordi Elizondo Montes</h1>
-        <p class="lead">Administración de bodega de repuestos de taller automotriz.</p>
-    </section>
-</main>
+<div class="container mt-5">
+    <div class="row justify-content-center">
+        <div class="col-md-8 col-lg-7">
+            <div class="card shadow-sm">
+                <div class="card-body text-center">
+                    <h1 id="title" class="mb-3">Proyecto #1 - Yordi Elizondo Montes</h1>
+                    <p class="lead">Administración de bodega de repuestos de taller automotriz.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
