--- a/Proyeto.GestionRepuestos.MVC/Views/Repuestos/Edit.cshtml
+++ b/Proyeto.GestionRepuestos.MVC/Views/Repuestos/Edit.cshtml
@@ -1,6 +1,6 @@
 @model Proyeto.GestionRepuestos.MVC.Models.Repuesto
 @{
-    ViewBag.Title = "Ingresar Nuevo Repuesto";
+    ViewBag.Title = "Editar Repuesto";
 }
 
 <div class="container mt-4">
@@ -22,6 +22,9 @@
                     @using (Html.BeginForm())
                     {
                         @Html.AntiForgeryToken()
+                        @Html.HiddenFor(m => m.Id)
+                        @Html.HiddenFor(m => m.FechaIngreso)
+
                         <div class="mb-3">
                             @Html.LabelFor(m => m.Nombre, new { @class = "form-label" })
                             @Html.TextBoxFor(m => m.Nombre, new { @class = "form-control" })
@@ -44,9 +47,9 @@
                                 @Html.ValidationMessageFor(m => m.Precio, "", new { @class = "text-danger" })
                             </div>
                         </div>
-                        <div class="d-grid gap-2">
-                            <button type="submit" class="btn btn-primary">Ingresar Repuesto</button>
-                            @Html.ActionLink("Volver a la lista", "Index", null, new { @class = "btn btn-secondary" })
+                        <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+                            <button type="submit" class="btn btn-primary me-md-2">Guardar Cambios</button>
+                            @Html.ActionLink("Cancelar", "Index", null, new { @class = "btn btn-secondary" })
                         </div>
                     }
                 </div>
