--- a/Proyeto.GestionRepuestos.MVC/Views/Roles/Assign.cshtml
+++ b/Proyeto.GestionRepuestos.MVC/Views/Roles/Assign.cshtml
@@ -1,19 +1,39 @@
 @{
     ViewBag.Title = "Asignar Rol a Usuario";
 }
-<h2>Asignar Rol a Usuario</h2>
-@using (Html.BeginForm())
-{
-    @Html.AntiForgeryToken()
-    <div class="form-group">
-        <label for="userId">Usuario</label>
-        @Html.DropDownList("userId", (SelectList)ViewBag.Users, "Seleccione un usuario", new { @class = "form-control", required = "required" })
+
+<div class="container mt-4">
+    <div class="row justify-content-center">
+        <div class="col-md-6">
+            <div class="card shadow-sm">
+                <div class="card-header bg-primary text-white">
+                    <h2 class="mb-0">Asignar Rol a Usuario</h2>
+                </div>
+                <div class="card-body">
+                    @using (Html.BeginForm())
+                    {
+                        @Html.AntiForgeryToken()
+                        <div class="mb-3">
+                            <label for="userId" class="form-label">Usuario</label>
+                            @Html.DropDownList("userId", (SelectList)ViewBag.Users, "Seleccione un usuario", new { @class = "form-select", required = "required" })
+                        </div>
+                        <div class="mb-3">
+                            <label for="roleName" class="form-label">Rol</label>
+                            @Html.DropDownList("roleName", (SelectList)ViewBag.Roles, "Seleccione un rol", new { @class = "form-select", required = "required" })
+                        </div>
+                        <div class="d-flex justify-content-between">
+                            <button type="submit" class="btn btn-primary">Asignar Rol</button>
+                            @Html.ActionLink("Volver a la lista", "Index", null, new { @class = "btn btn-secondary" })
+                        </div>
+                    }
+                    @if (!ViewData.ModelState.IsValid)
+                    {
+                        <div class="alert alert-danger mt-3">
+                            @Html.ValidationSummary()
+                        </div>
+                    }
+                </div>
+            </div>
+        </div>
     </div>
-    <div class="form-group">
-        <label for="roleName">Rol</label>
-        @Html.DropDownList("roleName", (SelectList)ViewBag.Roles, "Seleccione un rol", new { @class = "form-control", required = "required" })
-    </div>
-    <button type="submit" class="btn btn-primary">Asignar</button>
-    @Html.ActionLink("Volver a la lista", "Index", null, new { @class = "btn btn-default" })
-}
-@Html.ValidationSummary()
+</div>
