--- a/Proyeto.GestionRepuestos.MVC/Views/Roles/Create.cshtml
+++ b/Proyeto.GestionRepuestos.MVC/Views/Roles/Create.cshtml
@@ -1,15 +1,35 @@
 @{
     ViewBag.Title = "Crear Rol";
 }
-<h2>Crear Rol</h2>
-@using (Html.BeginForm())
-{
-    @Html.AntiForgeryToken()
-    <div class="form-group">
-        <label for="name">Nombre del rol</label>
-        <input type="text" name="name" class="form-control" required />
+
+<div class="container mt-4">
+    <div class="row justify-content-center">
+        <div class="col-md-6">
+            <div class="card shadow-sm">
+                <div class="card-header bg-primary text-white">
+                    <h2 class="mb-0">Crear Nuevo Rol</h2>
+                </div>
+                <div class="card-body">
+                    @using (Html.BeginForm())
+                    {
+                        @Html.AntiForgeryToken()
+                        <div class="mb-3">
+                            <label for="name" class="form-label">Nombre del rol</label>
+                            <input type="text" name="name" class="form-control" required />
+                        </div>
+                        <div class="d-flex justify-content-between">
+                            <button type="submit" class="btn btn-primary">Crear Rol</button>
+                            @Html.ActionLink("Volver a la lista", "Index", null, new { @class = "btn btn-secondary" })
+                        </div>
+                    }
+                    @if (!ViewData.ModelState.IsValid)
+                    {
+                        <div class="alert alert-danger mt-3">
+                            @Html.ValidationSummary()
+                        </div>
+                    }
+                </div>
+            </div>
+        </div>
     </div>
-    <button type="submit" class="btn btn-primary">Crear</button>
-    @Html.ActionLink("Volver a la lista", "Index", null, new { @class = "btn btn-default" })
-}
-@Html.ValidationSummary()
+</div>
