--- a/Proyeto.GestionRepuestos.MVC/Views/Roles/Delete.cshtml
+++ b/Proyeto.GestionRepuestos.MVC/Views/Roles/Delete.cshtml
@@ -2,13 +2,33 @@
 @{
     ViewBag.Title = "Eliminar Rol";
 }
-<h2>Eliminar Rol</h2>
-<h3>¿Está seguro que desea eliminar el rol "@Model.Name"?</h3>
-@using (Html.BeginForm("Delete", "Roles", FormMethod.Post))
-{
-    @Html.AntiForgeryToken()
-    @Html.HiddenFor(m => m.Id)
-    <button type="submit" class="btn btn-danger">Eliminar</button>
-    @Html.ActionLink("Cancelar", "Index", null, new { @class = "btn btn-default" })
-}
-@Html.ValidationSummary()
+
+<div class="container mt-4">
+    <div class="row justify-content-center">
+        <div class="col-md-6">
+            <div class="card shadow-sm">
+                <div class="card-header bg-danger text-white">
+                    <h2 class="mb-0">Eliminar Rol</h2>
+                </div>
+                <div class="card-body">
+                    <h4 class="mb-3">¿Está seguro que desea eliminar el rol <strong>@Model.Name</strong>?</h4>
+                    @using (Html.BeginForm("Delete", "Roles", FormMethod.Post))
+                    {
+                        @Html.AntiForgeryToken()
+                        @Html.HiddenFor(m => m.Id)
+                        <div class="d-flex gap-2">
+                            <button type="submit" class="btn btn-danger">Eliminar</button>
+                            @Html.ActionLink("Cancelar", "Index", null, new { @class = "btn btn-secondary" })
+                        </div>
+                    }
+                    @if (!ViewData.ModelState.IsValid)
+                    {
+                        <div class="alert alert-danger mt-3">
+                            @Html.ValidationSummary()
+                        </div>
+                    }
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
